// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish endpoints - publish package should add a new package 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "merdaccio",
      Object {
        "dist-tags": Object {},
        "name": "merdaccio",
        "time": Object {},
        "versions": Object {},
      },
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Publish endpoints - publish package should change the existing package 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "merdaccio",
      Object {
        "dist-tags": Object {},
        "name": "merdaccio",
        "time": Object {},
        "versions": Object {},
      },
      undefined,
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Publish endpoints - publish package should star a package 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "merdaccio",
      Object {
        "users": Object {
          "merdaccio": true,
        },
      },
      "15-e53a77096b0ee33e",
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
